# sysArms

./: CMakeLists.txt  arms.ini
include/: sys_arms_conf.hpp  sys_arms_daemon.hpp  sys_arms_defs.h  sys_arms_interactioner.hpp  sys_arms_leader.hpp  sys_arms_loger.hpp  sys_arms_supr.hpp  sys_arms_tension_leader.hpp
src/: main.cpp  sys_arms_daemon.cpp  sys_arms_interactioner.cpp  sys_arms_leader.cpp  sys_arms_loger.cpp  sys_arms_supr.cpp  sys_arms_supr.cpp.autosave  sys_arms_tension_leader.cpp
untitled/: basethread.cpp  basethread.h  host_base_messages.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  threadlinker.cpp  threadlinker.h  udp拉力数据下传.txt  untitled - 快捷方式.lnk  untitled.pro  untitled.pro.user.aa2be3a  untitled.pro.user.d29373f
